scripts/k8s/ingress/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
     nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  rules:
  # 1. Main Entry Point (Gateway)
  - host: gateway.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80

  # 2. Direct access to Order Service (for testing)
  - host: order.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80

  # 3. Direct access to Payment Service
  - host: payment.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80

  # 4. Direct access to Security JWT
  - host: security.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-security-jwt
            port:
              number: 80

  # 5. Direct access to Config Server
  - host: config.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-config-servier
            port:
              number: 80
